# optical

./: .all-contributorsrc  .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  publish.yaml  python-package.yml  tests.yaml
docs/: requirements.txt
docs/source/: api.rst  builddocs.rst  changelog.rst  coding_requirements.rst  conf.py  contrib.rst  index.rst  install.rst  intro.rst  issues.rst  overview.rst  pull_requests.rst  setupdev.rst  tests.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: custom-module-template.rst
optical/: __init__.py
optical/converter/: __init__.py  base.py  coco.py  converter.py  createml.py  csv.py  pascal.py  sagemaker.py  simple_json.py  tfrecord.py  utils.py  yolo.py
optical/converter/coco/: coco.py  coco2yolo.py
optical/detection/: __init__.py
optical/detection/formats/: __init__.py  annotation.py  base.py  coco.py  createml.py  csv.py  export.py  json_format.py  pascal.py  sagemaker.py  tfrecord.py  utils.py  yolo.py
optical/visualization/: shapes.py  utils.py  visualizer.py
optical/visualizer/: __init__.py  config.py  utils.py  visualizer.py
tests/: conftest.py  test_optical.py  test_visualizer.py
